--- a/myproject/myapp/templates/myapp/instructores.html
+++ b/myproject/myapp/templates/myapp/instructores.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursos</title>
+    <title>Instructiores</title>
 </head>
 <body>
-
     <table>
         <tr>
-            <th>Nombre</th>
-            <th>Cursos</th>
+            <td>Nombre</td>
+            <td>Email</td>
+            <td>Cursos</td>
         </tr>
-        
-        {% for curso in cursos %}
+
+        {% for i in instructores %}
+
         <tr>
-            <th>{{ curso.nombre }}</th>
-            <th>{{ curso.inscriptos }}</th>
+            <td>{{i.nombre}}</td>
+            <td>{{i.email}}</td>
+            <td>{{i.cursos_asignados}}</td>
         </tr>
+
         {% endfor %}
-
     </table>
-
-
 </body>
 </html>
