--- a/myproject/myapp/templates/myapp/cursos.html
+++ b/myproject/myapp/templates/myapp/cursos.html
@@ -18,6 +18,7 @@
         <tr>
             <th>{{ curso.nombre }}</th>
             <th>{{ curso.inscriptos }}</th>
+            <th>{{ curso.turno }}</th>
         </tr>
         {% endfor %}
 
